Converted everything into Events

--- a/examples/miniframebot/config.yml
+++ b/examples/miniframebot/config.yml
@@ -6,6 +6,6 @@ pipeline: supervised_embeddings
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
-  - name: FrameMemoizationPolicy
+  - name: AugmentedMemoizationPolicy
   - name: KerasPolicy
   - name: MappingPolicy
